<resources>
    <string name="app_name">Gardening Guru</string>
    <string name="plantName">plant name</string>
    <string name="row_spacing">row spacing</string>
    <string name="seed_spacing">seed spacing</string>
    <string name="sow_depth">sow depth</string>
    <string name="planting_notes">planting notes ...</string>
    <string name="germination_days">germination days</string>
    <string name="harvest_days">days until harvest</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="set_zip_code">Set Zip Code</string>
    <string name="city_state_zip_code_hardiness_zone">City, State Zip Code Hardiness Zone</string>
    <string name="add_plant">Add Plant</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="enterZip">Enter Zip Code</string>
    <string name="save_plant_information">Save Plant Information</string>
    <string name="plant_garden">Plant Garden</string>
    <string name="save_plant">Save Plant</string>
    <string name="reset_plant">Reset Plant</string>
    <string name="dropdown_of_plants">Dropdown of plants</string>
    <string name="edit_plants">Edit Plants</string>
    <string name="edit_reminders">Edit Reminders</string>
    <string name="submit_zip_code">Submit Zip Code</string>
    <string name="displayzone">displayZone</string>
    <string name="save_zone_info">Save Zone Info</string>
    <string name="save_task">Save Task</string>
    <string name="reset_task">Reset Task</string>
    <string name="taskname">taskName</string>
    <string name="planting_date">Planting Date</string>
    <string name="save">Save</string>
    <string name="reset_changes">Reset Changes</string>
    <string name="notes">Notes</string>
    <string name="delete_plant">Delete</string>
    <string name="update_plant">Update</string>
    <string name="notes_on_task">Notes on task</string>
    <string name="update_planting" >Update</string>
    <string name="delete_planting" >Delete</string>
    <string name="reset_planting" >Reset</string>
    <string name="add_planting" >Save</string>
    <string name="title_activity_task_list">TaskList</string>
    <string name="tasklistLbl">Task View</string>
    <string name="taskList_plantingTxtv">Planting</string>
    <string name="dueDateTxtV">Due Date</string>
    <string name="descriptionTxtV">Description</string>
    <string name="doneTxtV">Done</string>
    <string name="editTask">Edit</string>
    <string name="deleteTask">Delete</string>
    <string name="taskdate">MM/DD/YYYY</string>
    <string name="taskeditPlanting">Planting</string>
    <string name="name">Name</string>
    <string name="planting_name">Planting Name</string>
    <string name="planting_location">Planting Location</string>
    <string name="arraylistposition">arrayListPosition</string>
    <string name="channel_name">GardenGru</string>
    <string name="channel_description">Notification for planting gardens</string>
</resources>
